--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #57c5c5;
 }
 
 code {
